[gd_scene load_steps=5 format=3 uid="uid://dtbg8upr0w5ct"]

[ext_resource type="PackedScene" uid="uid://cohsryxhrxdjg" path="res://scenes/planet.tscn" id="1_1rf6y"]
[ext_resource type="Script" uid="uid://didn0dql51n72" path="res://scripts/launch_planet.gd" id="2_2fhli"]
[ext_resource type="Texture2D" uid="uid://3jm2ged4yo4a" path="res://assets/images/earth.png" id="3_2fhli"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2fhli"]
radius = 18.0

[node name="Planet" instance=ExtResource("1_1rf6y")]
script = ExtResource("2_2fhli")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_2fhli")

[node name="LauchArea2D" type="Area2D" parent="." index="2"]

[node name="LauchCollider" type="CollisionShape2D" parent="LauchArea2D" index="0"]
shape = SubResource("CircleShape2D_2fhli")

[connection signal="body_entered" from="LauchArea2D" to="." method="_on_lauch_area_2d_body_entered"]
[connection signal="input_event" from="LauchArea2D" to="." method="_on_lauch_area_2d_input_event"]
